[gd_scene load_steps=15 format=3 uid="uid://dcadhhw5jb57e"]

[ext_resource type="Script" path="res://Scripts/main.gd" id="1_2yka2"]
[ext_resource type="PackedScene" uid="uid://bcw7h8q4beem5" path="res://Scenes/Mob.tscn" id="2_6d0hk"]
[ext_resource type="Texture2D" uid="uid://cs4jcwrhjsqa7" path="res://fonts/StarsBackground.jpg" id="3_s7k1u"]
[ext_resource type="PackedScene" uid="uid://irqmg1mk2pp2" path="res://Scenes/HUD.tscn" id="3_xs5tk"]
[ext_resource type="PackedScene" uid="uid://ci4gnwcrfmb7y" path="res://Scenes/super_mob.tscn" id="4_sbasr"]
[ext_resource type="PackedScene" uid="uid://dhvdhk7gqatoi" path="res://Scenes/Player.tscn" id="4_w5gfv"]
[ext_resource type="PackedScene" uid="uid://cubq8us6lbgfl" path="res://Scenes/pickup.tscn" id="5_fdqv3"]
[ext_resource type="PackedScene" uid="uid://chy7n1p717tpu" path="res://Scenes/enemy_base.tscn" id="8_6rtgw"]
[ext_resource type="AudioStream" uid="uid://ho1n5x4jkfrr" path="res://art/gameOver.mp3" id="8_utxr3"]
[ext_resource type="Resource" uid="uid://def67ho27p87e" path="res://Resources/Red_resource.tres" id="9_gcwii"]
[ext_resource type="Resource" uid="uid://p4pdhdr6i1x6" path="res://Resources/Green_resource.tres" id="9_xdhcp"]
[ext_resource type="AudioStream" uid="uid://w6khy4r5owqq" path="res://art/shoot.mp3" id="9_yaisd"]
[ext_resource type="Resource" uid="uid://cfgj7orw442et" path="res://Resources/Blue_resource.tres" id="12_e7rou"]

[sub_resource type="Curve2D" id="Curve2D_83skg"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 480, 0, 0, 0, 0, 0, 480, 720, 0, 0, 0, 0, 0, 720, 0, 0, 0, 0, 0, 0)
}
point_count = 5

[node name="Main" type="Node"]
script = ExtResource("1_2yka2")
mob_scene = ExtResource("2_6d0hk")
coin_scene = ExtResource("5_fdqv3")
super_mob_scene = ExtResource("4_sbasr")

[node name="Background" type="TextureRect" parent="."]
offset_left = -176.0
offset_top = -288.0
offset_right = 664.0
offset_bottom = 920.0
texture = ExtResource("3_s7k1u")
expand_mode = 1

[node name="Player" parent="." instance=ExtResource("4_w5gfv")]
position = Vector2(242, 451)
rotation = 3.14159

[node name="HUD" parent="." instance=ExtResource("3_xs5tk")]

[node name="MobTimer" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[node name="ScoreTimer" type="Timer" parent="."]

[node name="StartTimer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[node name="StartPosition" type="Marker2D" parent="."]
position = Vector2(240, 450)

[node name="MobPath" type="Path2D" parent="."]
curve = SubResource("Curve2D_83skg")

[node name="MobSpawnLocation" type="PathFollow2D" parent="MobPath"]

[node name="EnemyTimer" type="Timer" parent="."]
wait_time = 5.0
autostart = true

[node name="ShootSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("9_yaisd")

[node name="GameOver" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("8_utxr3")

[node name="SuperMobTimer" type="Timer" parent="."]
wait_time = 3.0
autostart = true

[node name="enemy_Red" parent="." groups=["coin1"] instance=ExtResource("8_6rtgw")]
position = Vector2(-96, 133)
enemy_stats = ExtResource("9_gcwii")

[node name="enemy_Green" parent="." groups=["enemy"] instance=ExtResource("8_6rtgw")]
position = Vector2(-82, 596)
enemy_stats = ExtResource("9_xdhcp")

[node name="enemy_Blue" parent="." groups=["enemy"] instance=ExtResource("8_6rtgw")]
position = Vector2(-79, 370)
enemy_stats = ExtResource("12_e7rou")

[connection signal="timeout" from="MobTimer" to="." method="_on_mob_timer_timeout"]
[connection signal="timeout" from="ScoreTimer" to="." method="_on_score_timer_timeout"]
[connection signal="timeout" from="StartTimer" to="." method="_on_start_timer_timeout"]
[connection signal="timeout" from="EnemyTimer" to="." method="_on_enemy_timer_timeout"]
[connection signal="timeout" from="SuperMobTimer" to="." method="_on_super_mob_timer_timeout"]
